# blackhole

./: .gitignore  CMakeLists.txt  README.md  black_hole.cpp  geodesic.comp  geodesic_cuda.cu
examples/: 2D_lensing.cpp  CPU-geodesic.cpp  ray_tracing.cpp
shaders/: geodesic.comp  grid.frag  grid.vert
src/: black_hole.cpp
